deply-app/dev/front/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-nginx-svc
  namespace: dev-zh
  labels:
    app: dev-nginxl-svc
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30313
  selector:
    app: dev-nginx
