deply-app/dev/front/ingress-dev-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-http-front
  namespace: dev-zh
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: dev.zhtx.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dev-nginx-svc
            port: 
              number: 80
